--- a/Readme.mr
+++ b/Readme.mr
@@ -1,1 +1,3 @@
-Surf salva
+Este é um repositorio teste para ensinar como o Git funciona.
+
+Gostou do curso? Quer mais? Ajude com uma doação, até um café é valido. =)
