--- a/Readme.mr
+++ b/Readme.mr
@@ -1,3 +1,5 @@
 Este é um repositorio teste para ensinar como o Git funciona.
 
+Surf salva!
+
 Gostou do curso? Quer mais? Ajude com uma doação, até um café é valido. =)
